# ultra-long-robotics

memory_diffusion_policy/: .gitignore  README.md  environment.yml  pyproject.toml  serve_dp.py
memory_diffusion_policy/eval_envs/config/: base.yaml  train_dp_unet.yaml  train_dp_unet_obs2.yaml
memory_diffusion_policy/eval_envs/config/model/: dp_unet.yaml
memory_diffusion_policy/eval_envs/config/task/: robomme.yaml
memory_diffusion_policy/eval_envs/dataset/: __init__.py  base.py  robomme_dataset.py
memory_diffusion_policy/eval_envs/model/: base.py  dp_unet.py  nn_modules.py
memory_diffusion_policy/eval_envs/trainer/: robomme_evaluator.py  trainer.py
memory_diffusion_policy/eval_envs/utils/: clip_model.py  dataloader_util.py  distributed_util.py  module_replace.py  normalize.py  pytorch_util.py  transform.py
memory_diffusion_policy/scripts/: train.py
robomme_benchmark/: CLAUDE.md  Dockerfile
robomme_benchmark/doc/: env_format.md
robomme_benchmark/src/robomme/env_metadata/test/: record_dataset_MemoryChain_metadata.json
robomme_benchmark/src/robomme/env_metadata/train/: record_dataset_MemoryChain_metadata.json
robomme_benchmark/src/robomme/env_metadata/val/: record_dataset_MemoryChain_metadata.json
robomme_benchmark/src/robomme/env_record_wrapper/: episode_config_resolver.py
robomme_benchmark/src/robomme/robomme_env/: MemoryChain.py  __init__.py
robomme_benchmark/src/robomme/robomme_env/utils/: task_goal.py
